the dissapointing 5pm submit commit

--- a/views/store_view.erb
+++ b/views/store_view.erb
@@ -5,11 +5,22 @@
 
 <h3> here are the current brands sold at this store. </h3>
   <%if @brands.any? %>
-    <ul>
-    <% @brands.each do |brand|%>
-       <li><%= brand.name %></li>
-    <% end %>
+    <% @brands.each() do |brand| %>
+       <li><%= brand.name %> </li>
     </ul>
+    <%end%>
     <% else %>
     <h4>There are currently no brands supported at this store.</h4>
     <%end%>
+    <br>
+    <div class="row">
+      <div class="col-md3">
+        <a href="/"><button>Return to the home page! </button></a>
+      </div>
+      <div class="col-md3">
+        <a href="/"><button>Update store name</button></a>
+      </div>
+      <div class="col-md3">
+        <a href="/"><button> add a brand to the store</button></a>
+      </div>
+    </div>
