--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,11 @@
+<div class="jumbotron">
+
 <h1>Welcome to the wonderful world of shoes!</h1>
 
+</div>
+
 <div id="stores_display">
-  Here are the current stores in the database:
+  <h2>Here are the current stores in the database:</h2>
   <br>
   <% if @stores.any? %>
   <% @stores.each do |store| %>
@@ -19,16 +23,33 @@
     <% end %>
 
   <% else %>
-
     <p>there are no stores in the database. add one below!</p>
+    <% end %>
   </div>
-  <% end %>
-
   <form id="add_store" action="/stores" method="post">
     <label for="store_name">Type in the name of the store</label>
+    <br>
     <input type="text" name="store_name">
     <button type="submit" name="button">add store</button>
   </form>
+  <div id="brand_display">
+  <h2>Here are the current brands sold at this store. </h2>
+    <%if @brands.any? %>
+      <ul>
+      <% @brands.each() do |brand| %>
+         <li><%= brand.name %></li>
+         <% end %>
+      </ul>
+      <% else %>
+      <h4>There are currently no brands supported at this </h4>
+          <%end%>
+    </div>
+    <form id="add_brand" action="/brands" method="post">
+      <label for="brand_name">Type in the name of the brand</label>
+      <br>
+      <input type="text" name="brand_name">
+      <button type="submit" name="button">add brand</button>
+    </form>
 
-  </div>
-</div>
+
+  <a href="/"><button>Return to the home page! </button></a>
