passing integration spec for visiting a store page.

--- a/views/store_view.erb
+++ b/views/store_view.erb
@@ -14,13 +14,13 @@
     <%end%>
     <br>
     <div class="row">
-      <div class="col-md3">
+      <div class="col-md-3">
         <a href="/"><button>Return to the home page! </button></a>
       </div>
-      <div class="col-md3">
-        <a href="/"><button>Update store name</button></a>
+      <div class="col-md-3">
+        <a href="/store/:id/update"><button>Update store name</button></a>
       </div>
-      <div class="col-md3">
+      <div class="col-md-3">
         <a href="/"><button> add a brand to the store</button></a>
       </div>
     </div>
