add passing specs for the update and delete paths.

--- a/views/store_view.erb
+++ b/views/store_view.erb
@@ -18,7 +18,7 @@
         <a href="/"><button>Return to the home page! </button></a>
       </div>
       <div class="col-md-3">
-        <a href="/store/:id/update"><button>Update store name</button></a>
+        <a href="/store/<%= @store.id() %>/edit"><button>Update name</button></a>
       </div>
       <div class="col-md-3">
         <a href="/"><button> add a brand to the store</button></a>
