--- a/views/index.erb
+++ b/views/index.erb
@@ -37,7 +37,7 @@
     <%if @brands.any? %>
       <ul>
       <% @brands.each() do |brand| %>
-         <li><%= brand.name %></li>
+         <a href ="brands/<%= brand.id%>/stores"<li><%= brand.name %></li></a>
          <% end %>
       </ul>
       <% else %>
